// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rolldown-plugin-solid src should transform web components with contextToCustomElements enabled 1`] = `
"import { addEvent, createComponent, delegateEvents, effect, getOwner, insert, style, template } from "@solidjs/web";
const equalFn = (a, b) => a === b;
const signalOptions = { equals: equalFn };
let runEffects = runQueue;
const STALE = 1;
const PENDING = 2;
const UNOWNED = {
	owned: null,
	cleanups: null,
	context: null,
	owner: null
};
var Owner = null;
let Transition = null;
let Listener = null;
let Updates = null;
let Effects = null;
let ExecCount = 0;
function createSignal(value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const s = {
		value,
		observers: null,
		observerSlots: null,
		comparator: options.equals || void 0
	};
	const setter = (value) => {
		if (typeof value === "function") {
			if (Transition && Transition.running && Transition.sources.has(s)) value = value(s.tValue);
			else value = value(s.value);
		}
		return writeSignal(s, value);
	};
	return [readSignal.bind(s), setter];
}
function createRenderEffect(fn, value, options) {
	updateComputation(createComputation(fn, value, false, STALE));
}
function createMemo(fn, value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const c = createComputation(fn, value, true, 0);
	c.observers = null;
	c.observerSlots = null;
	c.comparator = options.equals || void 0;
	updateComputation(c);
	return readSignal.bind(c);
}
function untrack(fn) {
	if (Listener === null) return fn();
	const listener = Listener;
	Listener = null;
	try {
		return fn();
	} finally {
		Listener = listener;
	}
}
const [transPending, setTransPending] = /*@__PURE__*/ createSignal(false);
function createContext(defaultValue, options) {
	const id = Symbol("context");
	return {
		id,
		Provider: createProvider(id),
		defaultValue
	};
}
function useContext(context) {
	let value;
	return Owner && Owner.context && (value = Owner.context[context.id]) !== void 0 ? value : context.defaultValue;
}
function children(fn) {
	const children = createMemo(fn);
	const memo = createMemo(() => resolveChildren(children()));
	memo.toArray = () => {
		const c = memo();
		return Array.isArray(c) ? c : c != null ? [c] : [];
	};
	return memo;
}
function readSignal() {
	const runningTransition = Transition && Transition.running;
	if (this.sources && (runningTransition ? this.tState : this.state)) {
		if ((runningTransition ? this.tState : this.state) === STALE) updateComputation(this);
		else {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(this), false);
			Updates = updates;
		}
	}
	if (Listener) {
		const observers = this.observers;
		if (!observers || observers[observers.length - 1] !== Listener) {
			const sSlot = observers ? observers.length : 0;
			if (!Listener.sources) {
				Listener.sources = [this];
				Listener.sourceSlots = [sSlot];
			} else {
				Listener.sources.push(this);
				Listener.sourceSlots.push(sSlot);
			}
			if (!observers) {
				this.observers = [Listener];
				this.observerSlots = [Listener.sources.length - 1];
			} else {
				observers.push(Listener);
				this.observerSlots.push(Listener.sources.length - 1);
			}
		}
	}
	if (runningTransition && Transition.sources.has(this)) return this.tValue;
	return this.value;
}
function writeSignal(node, value, isComp) {
	let current = Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value;
	if (!node.comparator || !node.comparator(current, value)) {
		if (Transition) {
			const TransitionRunning = Transition.running;
			if (TransitionRunning || !isComp && Transition.sources.has(node)) {
				Transition.sources.add(node);
				node.tValue = value;
			}
			if (!TransitionRunning) node.value = value;
		} else node.value = value;
		if (node.observers && node.observers.length) runUpdates(() => {
			for (let i = 0; i < node.observers.length; i += 1) {
				const o = node.observers[i];
				const TransitionRunning = Transition && Transition.running;
				if (TransitionRunning && Transition.disposed.has(o)) continue;
				if (TransitionRunning ? !o.tState : !o.state) {
					if (o.pure) Updates.push(o);
					else Effects.push(o);
					if (o.observers) markDownstream(o);
				}
				if (!TransitionRunning) o.state = STALE;
				else o.tState = STALE;
			}
			if (Updates.length > 1e6) {
				Updates = [];
				throw new Error();
			}
		}, false);
	}
	return value;
}
function updateComputation(node) {
	if (!node.fn) return;
	cleanNode(node);
	const time = ExecCount;
	runComputation(node, Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value, time);
	if (Transition && !Transition.running && Transition.sources.has(node)) queueMicrotask(() => {
		runUpdates(() => {
			Transition && (Transition.running = true);
			Listener = Owner = node;
			runComputation(node, node.tValue, time);
			Listener = Owner = null;
		}, false);
	});
}
function runComputation(node, value, time) {
	let nextValue;
	const owner = Owner, listener = Listener;
	Listener = Owner = node;
	try {
		nextValue = node.fn(value);
	} catch (err) {
		if (node.pure) {
			if (Transition && Transition.running) {
				node.tState = STALE;
				node.tOwned && node.tOwned.forEach(cleanNode);
				node.tOwned = void 0;
			} else {
				node.state = STALE;
				node.owned && node.owned.forEach(cleanNode);
				node.owned = null;
			}
		}
		node.updatedAt = time + 1;
		return handleError(err);
	} finally {
		Listener = listener;
		Owner = owner;
	}
	if (!node.updatedAt || node.updatedAt <= time) {
		if (node.updatedAt != null && "observers" in node) writeSignal(node, nextValue, true);
		else if (Transition && Transition.running && node.pure) {
			if (!Transition.sources.has(node)) node.value = nextValue;
			Transition.sources.add(node);
			node.tValue = nextValue;
		} else node.value = nextValue;
		node.updatedAt = time;
	}
}
function createComputation(fn, init, pure, state = STALE, options) {
	const c = {
		fn,
		state,
		updatedAt: null,
		owned: null,
		sources: null,
		sourceSlots: null,
		cleanups: null,
		value: init,
		owner: Owner,
		context: Owner ? Owner.context : null,
		pure
	};
	if (Transition && Transition.running) {
		c.state = 0;
		c.tState = state;
	}
	if (Owner === null);
	else if (Owner !== UNOWNED) {
		if (Transition && Transition.running && Owner.pure) {
			if (!Owner.tOwned) Owner.tOwned = [c];
			else Owner.tOwned.push(c);
		} else if (!Owner.owned) Owner.owned = [c];
		else Owner.owned.push(c);
	}
	return c;
}
function runTop(node) {
	const runningTransition = Transition && Transition.running;
	if ((runningTransition ? node.tState : node.state) === 0) return;
	if ((runningTransition ? node.tState : node.state) === PENDING) return lookUpstream(node);
	if (node.suspense && untrack(node.suspense.inFallback)) return node.suspense.effects.push(node);
	const ancestors = [node];
	while ((node = node.owner) && (!node.updatedAt || node.updatedAt < ExecCount)) {
		if (runningTransition && Transition.disposed.has(node)) return;
		if (runningTransition ? node.tState : node.state) ancestors.push(node);
	}
	for (let i = ancestors.length - 1; i >= 0; i--) {
		node = ancestors[i];
		if (runningTransition) {
			let top = node, prev = ancestors[i + 1];
			while ((top = top.owner) && top !== prev) if (Transition.disposed.has(top)) return;
		}
		if ((runningTransition ? node.tState : node.state) === STALE) updateComputation(node);
		else if ((runningTransition ? node.tState : node.state) === PENDING) {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(node, ancestors[0]), false);
			Updates = updates;
		}
	}
}
function runUpdates(fn, init) {
	if (Updates) return fn();
	let wait = false;
	if (!init) Updates = [];
	if (Effects) wait = true;
	else Effects = [];
	ExecCount++;
	try {
		const res = fn();
		completeUpdates(wait);
		return res;
	} catch (err) {
		if (!wait) Effects = null;
		Updates = null;
		handleError(err);
	}
}
function completeUpdates(wait) {
	if (Updates) {
		runQueue(Updates);
		Updates = null;
	}
	if (wait) return;
	let res;
	if (Transition) {
		if (!Transition.promises.size && !Transition.queue.size) {
			const sources = Transition.sources;
			const disposed = Transition.disposed;
			Effects.push.apply(Effects, Transition.effects);
			res = Transition.resolve;
			for (const e of Effects) {
				"tState" in e && (e.state = e.tState);
				delete e.tState;
			}
			Transition = null;
			runUpdates(() => {
				for (const d of disposed) cleanNode(d);
				for (const v of sources) {
					v.value = v.tValue;
					if (v.owned) for (let i = 0, len = v.owned.length; i < len; i++) cleanNode(v.owned[i]);
					if (v.tOwned) v.owned = v.tOwned;
					delete v.tValue;
					delete v.tOwned;
					v.tState = 0;
				}
				setTransPending(false);
			}, false);
		} else if (Transition.running) {
			Transition.running = false;
			Transition.effects.push.apply(Transition.effects, Effects);
			Effects = null;
			setTransPending(true);
			return;
		}
	}
	const e = Effects;
	Effects = null;
	if (e.length) runUpdates(() => runEffects(e), false);
	if (res) res();
}
function runQueue(queue) {
	for (let i = 0; i < queue.length; i++) runTop(queue[i]);
}
function lookUpstream(node, ignore) {
	const runningTransition = Transition && Transition.running;
	if (runningTransition) node.tState = 0;
	else node.state = 0;
	for (let i = 0; i < node.sources.length; i += 1) {
		const source = node.sources[i];
		if (source.sources) {
			const state = runningTransition ? source.tState : source.state;
			if (state === STALE) {
				if (source !== ignore && (!source.updatedAt || source.updatedAt < ExecCount)) runTop(source);
			} else if (state === PENDING) lookUpstream(source, ignore);
		}
	}
}
function markDownstream(node) {
	const runningTransition = Transition && Transition.running;
	for (let i = 0; i < node.observers.length; i += 1) {
		const o = node.observers[i];
		if (runningTransition ? !o.tState : !o.state) {
			if (runningTransition) o.tState = PENDING;
			else o.state = PENDING;
			if (o.pure) Updates.push(o);
			else Effects.push(o);
			o.observers && markDownstream(o);
		}
	}
}
function cleanNode(node) {
	let i;
	if (node.sources) while (node.sources.length) {
		const source = node.sources.pop(), index = node.sourceSlots.pop(), obs = source.observers;
		if (obs && obs.length) {
			const n = obs.pop(), s = source.observerSlots.pop();
			if (index < obs.length) {
				n.sourceSlots[s] = index;
				obs[index] = n;
				source.observerSlots[index] = s;
			}
		}
	}
	if (node.tOwned) {
		for (i = node.tOwned.length - 1; i >= 0; i--) cleanNode(node.tOwned[i]);
		delete node.tOwned;
	}
	if (Transition && Transition.running && node.pure) reset(node, true);
	else if (node.owned) {
		for (i = node.owned.length - 1; i >= 0; i--) cleanNode(node.owned[i]);
		node.owned = null;
	}
	if (node.cleanups) {
		for (i = node.cleanups.length - 1; i >= 0; i--) node.cleanups[i]();
		node.cleanups = null;
	}
	if (Transition && Transition.running) node.tState = 0;
	else node.state = 0;
}
function reset(node, top) {
	if (!top) {
		node.tState = 0;
		Transition.disposed.add(node);
	}
	if (node.owned) for (let i = 0; i < node.owned.length; i++) reset(node.owned[i]);
}
function castError(err) {
	if (err instanceof Error) return err;
	return new Error(typeof err === "string" ? err : "Unknown error", { cause: err });
}
function handleError(err, owner = Owner) {
	throw castError(err);
}
function resolveChildren(children) {
	if (typeof children === "function" && !children.length) return resolveChildren(children());
	if (Array.isArray(children)) {
		const results = [];
		for (let i = 0; i < children.length; i++) {
			const result = resolveChildren(children[i]);
			if (Array.isArray(result)) {
				if (result.length < 32768) results.push.apply(results, result);
				else for (let j = 0; j < result.length; j++) results.push(result[j]);
			} else results.push(result);
		}
		return results;
	}
	return children;
}
function createProvider(id, options) {
	return function provider(props) {
		let res;
		createRenderEffect(() => res = untrack(() => {
			Owner.context = {
				...Owner.context,
				[id]: props.value
			};
			return children(() => props.children);
		}), void 0);
		return res;
	};
}
var _tmpl$ = /* @__PURE__ */ template(\`<div><h3>Custom Element Simulation</h3><p>Simulated Custom Element Theme: </p><button>Toggle Theme (via Custom Element Sim)</button><div style=margin-top:1rem><slot><p>This simulates slotted content inheriting theme context\`);
var _tmpl$2 = /* @__PURE__ */ template(\`<div>No theme context\`);
var _tmpl$3 = /* @__PURE__ */ template(\`<div><p>Regular Solid Component Theme: </p><button>Toggle Theme (via Solid Component)\`);
var _tmpl$4 = /* @__PURE__ */ template(\`<div><h4>Nested Context Test</h4><p>Theme accessible here: \`);
var _tmpl$5 = /* @__PURE__ */ template(\`<div><h2>Web Components + SolidJS Context Integration</h2><!><div style=margin:1rem><h3>Context Boundary Testing</h3></div><div style="padding:1rem;margin:1rem;border:1px solid #ccc;border-radius:4px;"><h3>Simulated Shadow DOM with Slots</h3><div style="background:var(--theme-bg, #fff);color:var(--theme-color, #000);padding:1rem;"><p>This simulates content inside shadow DOM</p><slot>Default slot content\`);
const ThemeContext = createContext();
const CustomElementWrapper = () => {
	const context = useContext(ThemeContext);
	const toggleTheme = context?.toggleTheme || (() => {});
	const theme = context?.theme?.() || "light";
	var _el$ = _tmpl$();
	var _el$3 = _el$.firstChild.nextSibling;
	_el$3.firstChild;
	var _el$5 = _el$3.nextSibling;
	var _el$7 = _el$5.nextSibling.firstChild;
	insert(_el$3, theme, null);
	addEvent(_el$5, "click", toggleTheme, true);
	_el$7._$owner = getOwner();
	effect(() => \`background: \${theme === "light" ? "#f0f0f0" : "#1a1a1a"}; color: \${theme === "light" ? "#000" : "#fff"}; padding: 1rem; border-radius: 4px; border: 1px solid \${theme === "light" ? "#ccc" : "#555"};\`, (_v$, _$p) => {
		style(_el$, _v$, _$p);
	});
	return _el$;
};
const ThemeProvider = (props) => {
	const [theme, setTheme] = createSignal("light");
	const toggleTheme = () => {
		setTheme((current) => current === "light" ? "dark" : "light");
	};
	return createComponent(ThemeContext.Provider, {
		value: {
			theme,
			toggleTheme
		},
		get children() {
			return props.children;
		}
	});
};
const RegularSolidComponent = () => {
	const context = useContext(ThemeContext);
	if (!context) return _tmpl$2();
	const { theme, toggleTheme } = context;
	var _el$9 = _tmpl$3();
	var _el$10 = _el$9.firstChild;
	_el$10.firstChild;
	var _el$12 = _el$10.nextSibling;
	insert(_el$10, theme, null);
	addEvent(_el$12, "click", toggleTheme, true);
	effect(() => \`background: \${theme() === "light" ? "#fff" : "#333"}; color: \${theme() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$9, _v$, _$p);
	});
	return _el$9;
};
const NestedContextTest = () => {
	const context = useContext(ThemeContext);
	var _el$13 = _tmpl$4();
	var _el$15 = _el$13.firstChild.nextSibling;
	_el$15.firstChild;
	insert(_el$15, () => {
		return context?.theme?.();
	}, null);
	insert(_el$13, createComponent(CustomElementWrapper, {}), null);
	effect(() => \`background: \${context?.theme?.() === "light" ? "#f9f9f9" : "#2a2a2a"}; color: \${context?.theme?.() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$13, _v$, _$p);
	});
	return _el$13;
};
const WebComponentsIntegration = () => {
	return createComponent(ThemeProvider, { get children() {
		var _el$17 = _tmpl$5();
		var _el$19 = _el$17.firstChild.nextSibling;
		var _el$20 = _el$19.nextSibling;
		_el$20.firstChild;
		var _el$26 = _el$20.nextSibling.firstChild.nextSibling.firstChild.nextSibling;
		insert(_el$17, createComponent(RegularSolidComponent, {}), _el$19);
		insert(_el$17, createComponent(CustomElementWrapper, {}), _el$20);
		insert(_el$20, createComponent(NestedContextTest, {}), null);
		_el$26._$owner = getOwner();
		return _el$17;
	} });
};
delegateEvents(["click"]);
export { WebComponentsIntegration as default };
"
`;

exports[`rolldown-plugin-solid dist should transform web components with contextToCustomElements enabled 1`] = `
"import { addEvent, createComponent, delegateEvents, effect, getOwner, insert, style, template } from "@solidjs/web";
const equalFn = (a, b) => a === b;
const signalOptions = { equals: equalFn };
let runEffects = runQueue;
const STALE = 1;
const PENDING = 2;
const UNOWNED = {
	owned: null,
	cleanups: null,
	context: null,
	owner: null
};
var Owner = null;
let Transition = null;
let Listener = null;
let Updates = null;
let Effects = null;
let ExecCount = 0;
function createSignal(value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const s = {
		value,
		observers: null,
		observerSlots: null,
		comparator: options.equals || void 0
	};
	const setter = (value) => {
		if (typeof value === "function") {
			if (Transition && Transition.running && Transition.sources.has(s)) value = value(s.tValue);
			else value = value(s.value);
		}
		return writeSignal(s, value);
	};
	return [readSignal.bind(s), setter];
}
function createRenderEffect(fn, value, options) {
	updateComputation(createComputation(fn, value, false, STALE));
}
function createMemo(fn, value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const c = createComputation(fn, value, true, 0);
	c.observers = null;
	c.observerSlots = null;
	c.comparator = options.equals || void 0;
	updateComputation(c);
	return readSignal.bind(c);
}
function untrack(fn) {
	if (Listener === null) return fn();
	const listener = Listener;
	Listener = null;
	try {
		return fn();
	} finally {
		Listener = listener;
	}
}
const [transPending, setTransPending] = /*@__PURE__*/ createSignal(false);
function createContext(defaultValue, options) {
	const id = Symbol("context");
	return {
		id,
		Provider: createProvider(id),
		defaultValue
	};
}
function useContext(context) {
	let value;
	return Owner && Owner.context && (value = Owner.context[context.id]) !== void 0 ? value : context.defaultValue;
}
function children(fn) {
	const children = createMemo(fn);
	const memo = createMemo(() => resolveChildren(children()));
	memo.toArray = () => {
		const c = memo();
		return Array.isArray(c) ? c : c != null ? [c] : [];
	};
	return memo;
}
function readSignal() {
	const runningTransition = Transition && Transition.running;
	if (this.sources && (runningTransition ? this.tState : this.state)) {
		if ((runningTransition ? this.tState : this.state) === STALE) updateComputation(this);
		else {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(this), false);
			Updates = updates;
		}
	}
	if (Listener) {
		const observers = this.observers;
		if (!observers || observers[observers.length - 1] !== Listener) {
			const sSlot = observers ? observers.length : 0;
			if (!Listener.sources) {
				Listener.sources = [this];
				Listener.sourceSlots = [sSlot];
			} else {
				Listener.sources.push(this);
				Listener.sourceSlots.push(sSlot);
			}
			if (!observers) {
				this.observers = [Listener];
				this.observerSlots = [Listener.sources.length - 1];
			} else {
				observers.push(Listener);
				this.observerSlots.push(Listener.sources.length - 1);
			}
		}
	}
	if (runningTransition && Transition.sources.has(this)) return this.tValue;
	return this.value;
}
function writeSignal(node, value, isComp) {
	let current = Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value;
	if (!node.comparator || !node.comparator(current, value)) {
		if (Transition) {
			const TransitionRunning = Transition.running;
			if (TransitionRunning || !isComp && Transition.sources.has(node)) {
				Transition.sources.add(node);
				node.tValue = value;
			}
			if (!TransitionRunning) node.value = value;
		} else node.value = value;
		if (node.observers && node.observers.length) runUpdates(() => {
			for (let i = 0; i < node.observers.length; i += 1) {
				const o = node.observers[i];
				const TransitionRunning = Transition && Transition.running;
				if (TransitionRunning && Transition.disposed.has(o)) continue;
				if (TransitionRunning ? !o.tState : !o.state) {
					if (o.pure) Updates.push(o);
					else Effects.push(o);
					if (o.observers) markDownstream(o);
				}
				if (!TransitionRunning) o.state = STALE;
				else o.tState = STALE;
			}
			if (Updates.length > 1e6) {
				Updates = [];
				throw new Error();
			}
		}, false);
	}
	return value;
}
function updateComputation(node) {
	if (!node.fn) return;
	cleanNode(node);
	const time = ExecCount;
	runComputation(node, Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value, time);
	if (Transition && !Transition.running && Transition.sources.has(node)) queueMicrotask(() => {
		runUpdates(() => {
			Transition && (Transition.running = true);
			Listener = Owner = node;
			runComputation(node, node.tValue, time);
			Listener = Owner = null;
		}, false);
	});
}
function runComputation(node, value, time) {
	let nextValue;
	const owner = Owner, listener = Listener;
	Listener = Owner = node;
	try {
		nextValue = node.fn(value);
	} catch (err) {
		if (node.pure) {
			if (Transition && Transition.running) {
				node.tState = STALE;
				node.tOwned && node.tOwned.forEach(cleanNode);
				node.tOwned = void 0;
			} else {
				node.state = STALE;
				node.owned && node.owned.forEach(cleanNode);
				node.owned = null;
			}
		}
		node.updatedAt = time + 1;
		return handleError(err);
	} finally {
		Listener = listener;
		Owner = owner;
	}
	if (!node.updatedAt || node.updatedAt <= time) {
		if (node.updatedAt != null && "observers" in node) writeSignal(node, nextValue, true);
		else if (Transition && Transition.running && node.pure) {
			if (!Transition.sources.has(node)) node.value = nextValue;
			Transition.sources.add(node);
			node.tValue = nextValue;
		} else node.value = nextValue;
		node.updatedAt = time;
	}
}
function createComputation(fn, init, pure, state = STALE, options) {
	const c = {
		fn,
		state,
		updatedAt: null,
		owned: null,
		sources: null,
		sourceSlots: null,
		cleanups: null,
		value: init,
		owner: Owner,
		context: Owner ? Owner.context : null,
		pure
	};
	if (Transition && Transition.running) {
		c.state = 0;
		c.tState = state;
	}
	if (Owner === null);
	else if (Owner !== UNOWNED) {
		if (Transition && Transition.running && Owner.pure) {
			if (!Owner.tOwned) Owner.tOwned = [c];
			else Owner.tOwned.push(c);
		} else if (!Owner.owned) Owner.owned = [c];
		else Owner.owned.push(c);
	}
	return c;
}
function runTop(node) {
	const runningTransition = Transition && Transition.running;
	if ((runningTransition ? node.tState : node.state) === 0) return;
	if ((runningTransition ? node.tState : node.state) === PENDING) return lookUpstream(node);
	if (node.suspense && untrack(node.suspense.inFallback)) return node.suspense.effects.push(node);
	const ancestors = [node];
	while ((node = node.owner) && (!node.updatedAt || node.updatedAt < ExecCount)) {
		if (runningTransition && Transition.disposed.has(node)) return;
		if (runningTransition ? node.tState : node.state) ancestors.push(node);
	}
	for (let i = ancestors.length - 1; i >= 0; i--) {
		node = ancestors[i];
		if (runningTransition) {
			let top = node, prev = ancestors[i + 1];
			while ((top = top.owner) && top !== prev) if (Transition.disposed.has(top)) return;
		}
		if ((runningTransition ? node.tState : node.state) === STALE) updateComputation(node);
		else if ((runningTransition ? node.tState : node.state) === PENDING) {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(node, ancestors[0]), false);
			Updates = updates;
		}
	}
}
function runUpdates(fn, init) {
	if (Updates) return fn();
	let wait = false;
	if (!init) Updates = [];
	if (Effects) wait = true;
	else Effects = [];
	ExecCount++;
	try {
		const res = fn();
		completeUpdates(wait);
		return res;
	} catch (err) {
		if (!wait) Effects = null;
		Updates = null;
		handleError(err);
	}
}
function completeUpdates(wait) {
	if (Updates) {
		runQueue(Updates);
		Updates = null;
	}
	if (wait) return;
	let res;
	if (Transition) {
		if (!Transition.promises.size && !Transition.queue.size) {
			const sources = Transition.sources;
			const disposed = Transition.disposed;
			Effects.push.apply(Effects, Transition.effects);
			res = Transition.resolve;
			for (const e of Effects) {
				"tState" in e && (e.state = e.tState);
				delete e.tState;
			}
			Transition = null;
			runUpdates(() => {
				for (const d of disposed) cleanNode(d);
				for (const v of sources) {
					v.value = v.tValue;
					if (v.owned) for (let i = 0, len = v.owned.length; i < len; i++) cleanNode(v.owned[i]);
					if (v.tOwned) v.owned = v.tOwned;
					delete v.tValue;
					delete v.tOwned;
					v.tState = 0;
				}
				setTransPending(false);
			}, false);
		} else if (Transition.running) {
			Transition.running = false;
			Transition.effects.push.apply(Transition.effects, Effects);
			Effects = null;
			setTransPending(true);
			return;
		}
	}
	const e = Effects;
	Effects = null;
	if (e.length) runUpdates(() => runEffects(e), false);
	if (res) res();
}
function runQueue(queue) {
	for (let i = 0; i < queue.length; i++) runTop(queue[i]);
}
function lookUpstream(node, ignore) {
	const runningTransition = Transition && Transition.running;
	if (runningTransition) node.tState = 0;
	else node.state = 0;
	for (let i = 0; i < node.sources.length; i += 1) {
		const source = node.sources[i];
		if (source.sources) {
			const state = runningTransition ? source.tState : source.state;
			if (state === STALE) {
				if (source !== ignore && (!source.updatedAt || source.updatedAt < ExecCount)) runTop(source);
			} else if (state === PENDING) lookUpstream(source, ignore);
		}
	}
}
function markDownstream(node) {
	const runningTransition = Transition && Transition.running;
	for (let i = 0; i < node.observers.length; i += 1) {
		const o = node.observers[i];
		if (runningTransition ? !o.tState : !o.state) {
			if (runningTransition) o.tState = PENDING;
			else o.state = PENDING;
			if (o.pure) Updates.push(o);
			else Effects.push(o);
			o.observers && markDownstream(o);
		}
	}
}
function cleanNode(node) {
	let i;
	if (node.sources) while (node.sources.length) {
		const source = node.sources.pop(), index = node.sourceSlots.pop(), obs = source.observers;
		if (obs && obs.length) {
			const n = obs.pop(), s = source.observerSlots.pop();
			if (index < obs.length) {
				n.sourceSlots[s] = index;
				obs[index] = n;
				source.observerSlots[index] = s;
			}
		}
	}
	if (node.tOwned) {
		for (i = node.tOwned.length - 1; i >= 0; i--) cleanNode(node.tOwned[i]);
		delete node.tOwned;
	}
	if (Transition && Transition.running && node.pure) reset(node, true);
	else if (node.owned) {
		for (i = node.owned.length - 1; i >= 0; i--) cleanNode(node.owned[i]);
		node.owned = null;
	}
	if (node.cleanups) {
		for (i = node.cleanups.length - 1; i >= 0; i--) node.cleanups[i]();
		node.cleanups = null;
	}
	if (Transition && Transition.running) node.tState = 0;
	else node.state = 0;
}
function reset(node, top) {
	if (!top) {
		node.tState = 0;
		Transition.disposed.add(node);
	}
	if (node.owned) for (let i = 0; i < node.owned.length; i++) reset(node.owned[i]);
}
function castError(err) {
	if (err instanceof Error) return err;
	return new Error(typeof err === "string" ? err : "Unknown error", { cause: err });
}
function handleError(err, owner = Owner) {
	throw castError(err);
}
function resolveChildren(children) {
	if (typeof children === "function" && !children.length) return resolveChildren(children());
	if (Array.isArray(children)) {
		const results = [];
		for (let i = 0; i < children.length; i++) {
			const result = resolveChildren(children[i]);
			if (Array.isArray(result)) {
				if (result.length < 32768) results.push.apply(results, result);
				else for (let j = 0; j < result.length; j++) results.push(result[j]);
			} else results.push(result);
		}
		return results;
	}
	return children;
}
function createProvider(id, options) {
	return function provider(props) {
		let res;
		createRenderEffect(() => res = untrack(() => {
			Owner.context = {
				...Owner.context,
				[id]: props.value
			};
			return children(() => props.children);
		}), void 0);
		return res;
	};
}
var _tmpl$ = /* @__PURE__ */ template(\`<div><h3>Custom Element Simulation</h3><p>Simulated Custom Element Theme: </p><button>Toggle Theme (via Custom Element Sim)</button><div style=margin-top:1rem><slot><p>This simulates slotted content inheriting theme context\`);
var _tmpl$2 = /* @__PURE__ */ template(\`<div>No theme context\`);
var _tmpl$3 = /* @__PURE__ */ template(\`<div><p>Regular Solid Component Theme: </p><button>Toggle Theme (via Solid Component)\`);
var _tmpl$4 = /* @__PURE__ */ template(\`<div><h4>Nested Context Test</h4><p>Theme accessible here: \`);
var _tmpl$5 = /* @__PURE__ */ template(\`<div><h2>Web Components + SolidJS Context Integration</h2><!><div style=margin:1rem><h3>Context Boundary Testing</h3></div><div style="padding:1rem;margin:1rem;border:1px solid #ccc;border-radius:4px;"><h3>Simulated Shadow DOM with Slots</h3><div style="background:var(--theme-bg, #fff);color:var(--theme-color, #000);padding:1rem;"><p>This simulates content inside shadow DOM</p><slot>Default slot content\`);
const ThemeContext = createContext();
const CustomElementWrapper = () => {
	const context = useContext(ThemeContext);
	const toggleTheme = context?.toggleTheme || (() => {});
	const theme = context?.theme?.() || "light";
	var _el$ = _tmpl$();
	var _el$3 = _el$.firstChild.nextSibling;
	_el$3.firstChild;
	var _el$5 = _el$3.nextSibling;
	var _el$7 = _el$5.nextSibling.firstChild;
	insert(_el$3, theme, null);
	addEvent(_el$5, "click", toggleTheme, true);
	_el$7._$owner = getOwner();
	effect(() => \`background: \${theme === "light" ? "#f0f0f0" : "#1a1a1a"}; color: \${theme === "light" ? "#000" : "#fff"}; padding: 1rem; border-radius: 4px; border: 1px solid \${theme === "light" ? "#ccc" : "#555"};\`, (_v$, _$p) => {
		style(_el$, _v$, _$p);
	});
	return _el$;
};
const ThemeProvider = (props) => {
	const [theme, setTheme] = createSignal("light");
	const toggleTheme = () => {
		setTheme((current) => current === "light" ? "dark" : "light");
	};
	return createComponent(ThemeContext.Provider, {
		value: {
			theme,
			toggleTheme
		},
		get children() {
			return props.children;
		}
	});
};
const RegularSolidComponent = () => {
	const context = useContext(ThemeContext);
	if (!context) return _tmpl$2();
	const { theme, toggleTheme } = context;
	var _el$9 = _tmpl$3();
	var _el$10 = _el$9.firstChild;
	_el$10.firstChild;
	var _el$12 = _el$10.nextSibling;
	insert(_el$10, theme, null);
	addEvent(_el$12, "click", toggleTheme, true);
	effect(() => \`background: \${theme() === "light" ? "#fff" : "#333"}; color: \${theme() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$9, _v$, _$p);
	});
	return _el$9;
};
const NestedContextTest = () => {
	const context = useContext(ThemeContext);
	var _el$13 = _tmpl$4();
	var _el$15 = _el$13.firstChild.nextSibling;
	_el$15.firstChild;
	insert(_el$15, () => {
		return context?.theme?.();
	}, null);
	insert(_el$13, createComponent(CustomElementWrapper, {}), null);
	effect(() => \`background: \${context?.theme?.() === "light" ? "#f9f9f9" : "#2a2a2a"}; color: \${context?.theme?.() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$13, _v$, _$p);
	});
	return _el$13;
};
const WebComponentsIntegration = () => {
	return createComponent(ThemeProvider, { get children() {
		var _el$17 = _tmpl$5();
		var _el$19 = _el$17.firstChild.nextSibling;
		var _el$20 = _el$19.nextSibling;
		_el$20.firstChild;
		var _el$26 = _el$20.nextSibling.firstChild.nextSibling.firstChild.nextSibling;
		insert(_el$17, createComponent(RegularSolidComponent, {}), _el$19);
		insert(_el$17, createComponent(CustomElementWrapper, {}), _el$20);
		insert(_el$20, createComponent(NestedContextTest, {}), null);
		_el$26._$owner = getOwner();
		return _el$17;
	} });
};
delegateEvents(["click"]);
export { WebComponentsIntegration as default };
"
`;

exports[`rolldown-plugin-solid src should transform web components with contextToCustomElements disabled 1`] = `
"import { addEvent, createComponent, delegateEvents, effect, insert, style, template } from "@solidjs/web";
const equalFn = (a, b) => a === b;
const signalOptions = { equals: equalFn };
let runEffects = runQueue;
const STALE = 1;
const PENDING = 2;
const UNOWNED = {
	owned: null,
	cleanups: null,
	context: null,
	owner: null
};
var Owner = null;
let Transition = null;
let Listener = null;
let Updates = null;
let Effects = null;
let ExecCount = 0;
function createSignal(value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const s = {
		value,
		observers: null,
		observerSlots: null,
		comparator: options.equals || void 0
	};
	const setter = (value) => {
		if (typeof value === "function") {
			if (Transition && Transition.running && Transition.sources.has(s)) value = value(s.tValue);
			else value = value(s.value);
		}
		return writeSignal(s, value);
	};
	return [readSignal.bind(s), setter];
}
function createRenderEffect(fn, value, options) {
	updateComputation(createComputation(fn, value, false, STALE));
}
function createMemo(fn, value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const c = createComputation(fn, value, true, 0);
	c.observers = null;
	c.observerSlots = null;
	c.comparator = options.equals || void 0;
	updateComputation(c);
	return readSignal.bind(c);
}
function untrack(fn) {
	if (Listener === null) return fn();
	const listener = Listener;
	Listener = null;
	try {
		return fn();
	} finally {
		Listener = listener;
	}
}
const [transPending, setTransPending] = /*@__PURE__*/ createSignal(false);
function createContext(defaultValue, options) {
	const id = Symbol("context");
	return {
		id,
		Provider: createProvider(id),
		defaultValue
	};
}
function useContext(context) {
	let value;
	return Owner && Owner.context && (value = Owner.context[context.id]) !== void 0 ? value : context.defaultValue;
}
function children(fn) {
	const children = createMemo(fn);
	const memo = createMemo(() => resolveChildren(children()));
	memo.toArray = () => {
		const c = memo();
		return Array.isArray(c) ? c : c != null ? [c] : [];
	};
	return memo;
}
function readSignal() {
	const runningTransition = Transition && Transition.running;
	if (this.sources && (runningTransition ? this.tState : this.state)) {
		if ((runningTransition ? this.tState : this.state) === STALE) updateComputation(this);
		else {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(this), false);
			Updates = updates;
		}
	}
	if (Listener) {
		const observers = this.observers;
		if (!observers || observers[observers.length - 1] !== Listener) {
			const sSlot = observers ? observers.length : 0;
			if (!Listener.sources) {
				Listener.sources = [this];
				Listener.sourceSlots = [sSlot];
			} else {
				Listener.sources.push(this);
				Listener.sourceSlots.push(sSlot);
			}
			if (!observers) {
				this.observers = [Listener];
				this.observerSlots = [Listener.sources.length - 1];
			} else {
				observers.push(Listener);
				this.observerSlots.push(Listener.sources.length - 1);
			}
		}
	}
	if (runningTransition && Transition.sources.has(this)) return this.tValue;
	return this.value;
}
function writeSignal(node, value, isComp) {
	let current = Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value;
	if (!node.comparator || !node.comparator(current, value)) {
		if (Transition) {
			const TransitionRunning = Transition.running;
			if (TransitionRunning || !isComp && Transition.sources.has(node)) {
				Transition.sources.add(node);
				node.tValue = value;
			}
			if (!TransitionRunning) node.value = value;
		} else node.value = value;
		if (node.observers && node.observers.length) runUpdates(() => {
			for (let i = 0; i < node.observers.length; i += 1) {
				const o = node.observers[i];
				const TransitionRunning = Transition && Transition.running;
				if (TransitionRunning && Transition.disposed.has(o)) continue;
				if (TransitionRunning ? !o.tState : !o.state) {
					if (o.pure) Updates.push(o);
					else Effects.push(o);
					if (o.observers) markDownstream(o);
				}
				if (!TransitionRunning) o.state = STALE;
				else o.tState = STALE;
			}
			if (Updates.length > 1e6) {
				Updates = [];
				throw new Error();
			}
		}, false);
	}
	return value;
}
function updateComputation(node) {
	if (!node.fn) return;
	cleanNode(node);
	const time = ExecCount;
	runComputation(node, Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value, time);
	if (Transition && !Transition.running && Transition.sources.has(node)) queueMicrotask(() => {
		runUpdates(() => {
			Transition && (Transition.running = true);
			Listener = Owner = node;
			runComputation(node, node.tValue, time);
			Listener = Owner = null;
		}, false);
	});
}
function runComputation(node, value, time) {
	let nextValue;
	const owner = Owner, listener = Listener;
	Listener = Owner = node;
	try {
		nextValue = node.fn(value);
	} catch (err) {
		if (node.pure) {
			if (Transition && Transition.running) {
				node.tState = STALE;
				node.tOwned && node.tOwned.forEach(cleanNode);
				node.tOwned = void 0;
			} else {
				node.state = STALE;
				node.owned && node.owned.forEach(cleanNode);
				node.owned = null;
			}
		}
		node.updatedAt = time + 1;
		return handleError(err);
	} finally {
		Listener = listener;
		Owner = owner;
	}
	if (!node.updatedAt || node.updatedAt <= time) {
		if (node.updatedAt != null && "observers" in node) writeSignal(node, nextValue, true);
		else if (Transition && Transition.running && node.pure) {
			if (!Transition.sources.has(node)) node.value = nextValue;
			Transition.sources.add(node);
			node.tValue = nextValue;
		} else node.value = nextValue;
		node.updatedAt = time;
	}
}
function createComputation(fn, init, pure, state = STALE, options) {
	const c = {
		fn,
		state,
		updatedAt: null,
		owned: null,
		sources: null,
		sourceSlots: null,
		cleanups: null,
		value: init,
		owner: Owner,
		context: Owner ? Owner.context : null,
		pure
	};
	if (Transition && Transition.running) {
		c.state = 0;
		c.tState = state;
	}
	if (Owner === null);
	else if (Owner !== UNOWNED) {
		if (Transition && Transition.running && Owner.pure) {
			if (!Owner.tOwned) Owner.tOwned = [c];
			else Owner.tOwned.push(c);
		} else if (!Owner.owned) Owner.owned = [c];
		else Owner.owned.push(c);
	}
	return c;
}
function runTop(node) {
	const runningTransition = Transition && Transition.running;
	if ((runningTransition ? node.tState : node.state) === 0) return;
	if ((runningTransition ? node.tState : node.state) === PENDING) return lookUpstream(node);
	if (node.suspense && untrack(node.suspense.inFallback)) return node.suspense.effects.push(node);
	const ancestors = [node];
	while ((node = node.owner) && (!node.updatedAt || node.updatedAt < ExecCount)) {
		if (runningTransition && Transition.disposed.has(node)) return;
		if (runningTransition ? node.tState : node.state) ancestors.push(node);
	}
	for (let i = ancestors.length - 1; i >= 0; i--) {
		node = ancestors[i];
		if (runningTransition) {
			let top = node, prev = ancestors[i + 1];
			while ((top = top.owner) && top !== prev) if (Transition.disposed.has(top)) return;
		}
		if ((runningTransition ? node.tState : node.state) === STALE) updateComputation(node);
		else if ((runningTransition ? node.tState : node.state) === PENDING) {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(node, ancestors[0]), false);
			Updates = updates;
		}
	}
}
function runUpdates(fn, init) {
	if (Updates) return fn();
	let wait = false;
	if (!init) Updates = [];
	if (Effects) wait = true;
	else Effects = [];
	ExecCount++;
	try {
		const res = fn();
		completeUpdates(wait);
		return res;
	} catch (err) {
		if (!wait) Effects = null;
		Updates = null;
		handleError(err);
	}
}
function completeUpdates(wait) {
	if (Updates) {
		runQueue(Updates);
		Updates = null;
	}
	if (wait) return;
	let res;
	if (Transition) {
		if (!Transition.promises.size && !Transition.queue.size) {
			const sources = Transition.sources;
			const disposed = Transition.disposed;
			Effects.push.apply(Effects, Transition.effects);
			res = Transition.resolve;
			for (const e of Effects) {
				"tState" in e && (e.state = e.tState);
				delete e.tState;
			}
			Transition = null;
			runUpdates(() => {
				for (const d of disposed) cleanNode(d);
				for (const v of sources) {
					v.value = v.tValue;
					if (v.owned) for (let i = 0, len = v.owned.length; i < len; i++) cleanNode(v.owned[i]);
					if (v.tOwned) v.owned = v.tOwned;
					delete v.tValue;
					delete v.tOwned;
					v.tState = 0;
				}
				setTransPending(false);
			}, false);
		} else if (Transition.running) {
			Transition.running = false;
			Transition.effects.push.apply(Transition.effects, Effects);
			Effects = null;
			setTransPending(true);
			return;
		}
	}
	const e = Effects;
	Effects = null;
	if (e.length) runUpdates(() => runEffects(e), false);
	if (res) res();
}
function runQueue(queue) {
	for (let i = 0; i < queue.length; i++) runTop(queue[i]);
}
function lookUpstream(node, ignore) {
	const runningTransition = Transition && Transition.running;
	if (runningTransition) node.tState = 0;
	else node.state = 0;
	for (let i = 0; i < node.sources.length; i += 1) {
		const source = node.sources[i];
		if (source.sources) {
			const state = runningTransition ? source.tState : source.state;
			if (state === STALE) {
				if (source !== ignore && (!source.updatedAt || source.updatedAt < ExecCount)) runTop(source);
			} else if (state === PENDING) lookUpstream(source, ignore);
		}
	}
}
function markDownstream(node) {
	const runningTransition = Transition && Transition.running;
	for (let i = 0; i < node.observers.length; i += 1) {
		const o = node.observers[i];
		if (runningTransition ? !o.tState : !o.state) {
			if (runningTransition) o.tState = PENDING;
			else o.state = PENDING;
			if (o.pure) Updates.push(o);
			else Effects.push(o);
			o.observers && markDownstream(o);
		}
	}
}
function cleanNode(node) {
	let i;
	if (node.sources) while (node.sources.length) {
		const source = node.sources.pop(), index = node.sourceSlots.pop(), obs = source.observers;
		if (obs && obs.length) {
			const n = obs.pop(), s = source.observerSlots.pop();
			if (index < obs.length) {
				n.sourceSlots[s] = index;
				obs[index] = n;
				source.observerSlots[index] = s;
			}
		}
	}
	if (node.tOwned) {
		for (i = node.tOwned.length - 1; i >= 0; i--) cleanNode(node.tOwned[i]);
		delete node.tOwned;
	}
	if (Transition && Transition.running && node.pure) reset(node, true);
	else if (node.owned) {
		for (i = node.owned.length - 1; i >= 0; i--) cleanNode(node.owned[i]);
		node.owned = null;
	}
	if (node.cleanups) {
		for (i = node.cleanups.length - 1; i >= 0; i--) node.cleanups[i]();
		node.cleanups = null;
	}
	if (Transition && Transition.running) node.tState = 0;
	else node.state = 0;
}
function reset(node, top) {
	if (!top) {
		node.tState = 0;
		Transition.disposed.add(node);
	}
	if (node.owned) for (let i = 0; i < node.owned.length; i++) reset(node.owned[i]);
}
function castError(err) {
	if (err instanceof Error) return err;
	return new Error(typeof err === "string" ? err : "Unknown error", { cause: err });
}
function handleError(err, owner = Owner) {
	throw castError(err);
}
function resolveChildren(children) {
	if (typeof children === "function" && !children.length) return resolveChildren(children());
	if (Array.isArray(children)) {
		const results = [];
		for (let i = 0; i < children.length; i++) {
			const result = resolveChildren(children[i]);
			if (Array.isArray(result)) {
				if (result.length < 32768) results.push.apply(results, result);
				else for (let j = 0; j < result.length; j++) results.push(result[j]);
			} else results.push(result);
		}
		return results;
	}
	return children;
}
function createProvider(id, options) {
	return function provider(props) {
		let res;
		createRenderEffect(() => res = untrack(() => {
			Owner.context = {
				...Owner.context,
				[id]: props.value
			};
			return children(() => props.children);
		}), void 0);
		return res;
	};
}
var _tmpl$ = /* @__PURE__ */ template(\`<div><h3>Custom Element Simulation</h3><p>Simulated Custom Element Theme: </p><button>Toggle Theme (via Custom Element Sim)</button><div style=margin-top:1rem><slot><p>This simulates slotted content inheriting theme context\`);
var _tmpl$2 = /* @__PURE__ */ template(\`<div>No theme context\`);
var _tmpl$3 = /* @__PURE__ */ template(\`<div><p>Regular Solid Component Theme: </p><button>Toggle Theme (via Solid Component)\`);
var _tmpl$4 = /* @__PURE__ */ template(\`<div><h4>Nested Context Test</h4><p>Theme accessible here: \`);
var _tmpl$5 = /* @__PURE__ */ template(\`<div><h2>Web Components + SolidJS Context Integration</h2><!><div style=margin:1rem><h3>Context Boundary Testing</h3></div><div style="padding:1rem;margin:1rem;border:1px solid #ccc;border-radius:4px;"><h3>Simulated Shadow DOM with Slots</h3><div style="background:var(--theme-bg, #fff);color:var(--theme-color, #000);padding:1rem;"><p>This simulates content inside shadow DOM</p><slot>Default slot content\`);
const ThemeContext = createContext();
const CustomElementWrapper = () => {
	const context = useContext(ThemeContext);
	const toggleTheme = context?.toggleTheme || (() => {});
	const theme = context?.theme?.() || "light";
	var _el$ = _tmpl$();
	var _el$3 = _el$.firstChild.nextSibling;
	_el$3.firstChild;
	var _el$5 = _el$3.nextSibling;
	insert(_el$3, theme, null);
	addEvent(_el$5, "click", toggleTheme, true);
	effect(() => \`background: \${theme === "light" ? "#f0f0f0" : "#1a1a1a"}; color: \${theme === "light" ? "#000" : "#fff"}; padding: 1rem; border-radius: 4px; border: 1px solid \${theme === "light" ? "#ccc" : "#555"};\`, (_v$, _$p) => {
		style(_el$, _v$, _$p);
	});
	return _el$;
};
const ThemeProvider = (props) => {
	const [theme, setTheme] = createSignal("light");
	const toggleTheme = () => {
		setTheme((current) => current === "light" ? "dark" : "light");
	};
	return createComponent(ThemeContext.Provider, {
		value: {
			theme,
			toggleTheme
		},
		get children() {
			return props.children;
		}
	});
};
const RegularSolidComponent = () => {
	const context = useContext(ThemeContext);
	if (!context) return _tmpl$2();
	const { theme, toggleTheme } = context;
	var _el$7 = _tmpl$3();
	var _el$8 = _el$7.firstChild;
	_el$8.firstChild;
	var _el$10 = _el$8.nextSibling;
	insert(_el$8, theme, null);
	addEvent(_el$10, "click", toggleTheme, true);
	effect(() => \`background: \${theme() === "light" ? "#fff" : "#333"}; color: \${theme() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$7, _v$, _$p);
	});
	return _el$7;
};
const NestedContextTest = () => {
	const context = useContext(ThemeContext);
	var _el$11 = _tmpl$4();
	var _el$13 = _el$11.firstChild.nextSibling;
	_el$13.firstChild;
	insert(_el$13, () => {
		return context?.theme?.();
	}, null);
	insert(_el$11, createComponent(CustomElementWrapper, {}), null);
	effect(() => \`background: \${context?.theme?.() === "light" ? "#f9f9f9" : "#2a2a2a"}; color: \${context?.theme?.() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$11, _v$, _$p);
	});
	return _el$11;
};
const WebComponentsIntegration = () => {
	return createComponent(ThemeProvider, { get children() {
		var _el$15 = _tmpl$5();
		var _el$17 = _el$15.firstChild.nextSibling;
		var _el$18 = _el$17.nextSibling;
		_el$18.firstChild;
		_el$18.nextSibling;
		insert(_el$15, createComponent(RegularSolidComponent, {}), _el$17);
		insert(_el$15, createComponent(CustomElementWrapper, {}), _el$18);
		insert(_el$18, createComponent(NestedContextTest, {}), null);
		return _el$15;
	} });
};
delegateEvents(["click"]);
export { WebComponentsIntegration as default };
"
`;

exports[`rolldown-plugin-solid dist should transform web components with contextToCustomElements disabled 1`] = `
"import { addEvent, createComponent, delegateEvents, effect, insert, style, template } from "@solidjs/web";
const equalFn = (a, b) => a === b;
const signalOptions = { equals: equalFn };
let runEffects = runQueue;
const STALE = 1;
const PENDING = 2;
const UNOWNED = {
	owned: null,
	cleanups: null,
	context: null,
	owner: null
};
var Owner = null;
let Transition = null;
let Listener = null;
let Updates = null;
let Effects = null;
let ExecCount = 0;
function createSignal(value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const s = {
		value,
		observers: null,
		observerSlots: null,
		comparator: options.equals || void 0
	};
	const setter = (value) => {
		if (typeof value === "function") {
			if (Transition && Transition.running && Transition.sources.has(s)) value = value(s.tValue);
			else value = value(s.value);
		}
		return writeSignal(s, value);
	};
	return [readSignal.bind(s), setter];
}
function createRenderEffect(fn, value, options) {
	updateComputation(createComputation(fn, value, false, STALE));
}
function createMemo(fn, value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const c = createComputation(fn, value, true, 0);
	c.observers = null;
	c.observerSlots = null;
	c.comparator = options.equals || void 0;
	updateComputation(c);
	return readSignal.bind(c);
}
function untrack(fn) {
	if (Listener === null) return fn();
	const listener = Listener;
	Listener = null;
	try {
		return fn();
	} finally {
		Listener = listener;
	}
}
const [transPending, setTransPending] = /*@__PURE__*/ createSignal(false);
function createContext(defaultValue, options) {
	const id = Symbol("context");
	return {
		id,
		Provider: createProvider(id),
		defaultValue
	};
}
function useContext(context) {
	let value;
	return Owner && Owner.context && (value = Owner.context[context.id]) !== void 0 ? value : context.defaultValue;
}
function children(fn) {
	const children = createMemo(fn);
	const memo = createMemo(() => resolveChildren(children()));
	memo.toArray = () => {
		const c = memo();
		return Array.isArray(c) ? c : c != null ? [c] : [];
	};
	return memo;
}
function readSignal() {
	const runningTransition = Transition && Transition.running;
	if (this.sources && (runningTransition ? this.tState : this.state)) {
		if ((runningTransition ? this.tState : this.state) === STALE) updateComputation(this);
		else {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(this), false);
			Updates = updates;
		}
	}
	if (Listener) {
		const observers = this.observers;
		if (!observers || observers[observers.length - 1] !== Listener) {
			const sSlot = observers ? observers.length : 0;
			if (!Listener.sources) {
				Listener.sources = [this];
				Listener.sourceSlots = [sSlot];
			} else {
				Listener.sources.push(this);
				Listener.sourceSlots.push(sSlot);
			}
			if (!observers) {
				this.observers = [Listener];
				this.observerSlots = [Listener.sources.length - 1];
			} else {
				observers.push(Listener);
				this.observerSlots.push(Listener.sources.length - 1);
			}
		}
	}
	if (runningTransition && Transition.sources.has(this)) return this.tValue;
	return this.value;
}
function writeSignal(node, value, isComp) {
	let current = Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value;
	if (!node.comparator || !node.comparator(current, value)) {
		if (Transition) {
			const TransitionRunning = Transition.running;
			if (TransitionRunning || !isComp && Transition.sources.has(node)) {
				Transition.sources.add(node);
				node.tValue = value;
			}
			if (!TransitionRunning) node.value = value;
		} else node.value = value;
		if (node.observers && node.observers.length) runUpdates(() => {
			for (let i = 0; i < node.observers.length; i += 1) {
				const o = node.observers[i];
				const TransitionRunning = Transition && Transition.running;
				if (TransitionRunning && Transition.disposed.has(o)) continue;
				if (TransitionRunning ? !o.tState : !o.state) {
					if (o.pure) Updates.push(o);
					else Effects.push(o);
					if (o.observers) markDownstream(o);
				}
				if (!TransitionRunning) o.state = STALE;
				else o.tState = STALE;
			}
			if (Updates.length > 1e6) {
				Updates = [];
				throw new Error();
			}
		}, false);
	}
	return value;
}
function updateComputation(node) {
	if (!node.fn) return;
	cleanNode(node);
	const time = ExecCount;
	runComputation(node, Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value, time);
	if (Transition && !Transition.running && Transition.sources.has(node)) queueMicrotask(() => {
		runUpdates(() => {
			Transition && (Transition.running = true);
			Listener = Owner = node;
			runComputation(node, node.tValue, time);
			Listener = Owner = null;
		}, false);
	});
}
function runComputation(node, value, time) {
	let nextValue;
	const owner = Owner, listener = Listener;
	Listener = Owner = node;
	try {
		nextValue = node.fn(value);
	} catch (err) {
		if (node.pure) {
			if (Transition && Transition.running) {
				node.tState = STALE;
				node.tOwned && node.tOwned.forEach(cleanNode);
				node.tOwned = void 0;
			} else {
				node.state = STALE;
				node.owned && node.owned.forEach(cleanNode);
				node.owned = null;
			}
		}
		node.updatedAt = time + 1;
		return handleError(err);
	} finally {
		Listener = listener;
		Owner = owner;
	}
	if (!node.updatedAt || node.updatedAt <= time) {
		if (node.updatedAt != null && "observers" in node) writeSignal(node, nextValue, true);
		else if (Transition && Transition.running && node.pure) {
			if (!Transition.sources.has(node)) node.value = nextValue;
			Transition.sources.add(node);
			node.tValue = nextValue;
		} else node.value = nextValue;
		node.updatedAt = time;
	}
}
function createComputation(fn, init, pure, state = STALE, options) {
	const c = {
		fn,
		state,
		updatedAt: null,
		owned: null,
		sources: null,
		sourceSlots: null,
		cleanups: null,
		value: init,
		owner: Owner,
		context: Owner ? Owner.context : null,
		pure
	};
	if (Transition && Transition.running) {
		c.state = 0;
		c.tState = state;
	}
	if (Owner === null);
	else if (Owner !== UNOWNED) {
		if (Transition && Transition.running && Owner.pure) {
			if (!Owner.tOwned) Owner.tOwned = [c];
			else Owner.tOwned.push(c);
		} else if (!Owner.owned) Owner.owned = [c];
		else Owner.owned.push(c);
	}
	return c;
}
function runTop(node) {
	const runningTransition = Transition && Transition.running;
	if ((runningTransition ? node.tState : node.state) === 0) return;
	if ((runningTransition ? node.tState : node.state) === PENDING) return lookUpstream(node);
	if (node.suspense && untrack(node.suspense.inFallback)) return node.suspense.effects.push(node);
	const ancestors = [node];
	while ((node = node.owner) && (!node.updatedAt || node.updatedAt < ExecCount)) {
		if (runningTransition && Transition.disposed.has(node)) return;
		if (runningTransition ? node.tState : node.state) ancestors.push(node);
	}
	for (let i = ancestors.length - 1; i >= 0; i--) {
		node = ancestors[i];
		if (runningTransition) {
			let top = node, prev = ancestors[i + 1];
			while ((top = top.owner) && top !== prev) if (Transition.disposed.has(top)) return;
		}
		if ((runningTransition ? node.tState : node.state) === STALE) updateComputation(node);
		else if ((runningTransition ? node.tState : node.state) === PENDING) {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(node, ancestors[0]), false);
			Updates = updates;
		}
	}
}
function runUpdates(fn, init) {
	if (Updates) return fn();
	let wait = false;
	if (!init) Updates = [];
	if (Effects) wait = true;
	else Effects = [];
	ExecCount++;
	try {
		const res = fn();
		completeUpdates(wait);
		return res;
	} catch (err) {
		if (!wait) Effects = null;
		Updates = null;
		handleError(err);
	}
}
function completeUpdates(wait) {
	if (Updates) {
		runQueue(Updates);
		Updates = null;
	}
	if (wait) return;
	let res;
	if (Transition) {
		if (!Transition.promises.size && !Transition.queue.size) {
			const sources = Transition.sources;
			const disposed = Transition.disposed;
			Effects.push.apply(Effects, Transition.effects);
			res = Transition.resolve;
			for (const e of Effects) {
				"tState" in e && (e.state = e.tState);
				delete e.tState;
			}
			Transition = null;
			runUpdates(() => {
				for (const d of disposed) cleanNode(d);
				for (const v of sources) {
					v.value = v.tValue;
					if (v.owned) for (let i = 0, len = v.owned.length; i < len; i++) cleanNode(v.owned[i]);
					if (v.tOwned) v.owned = v.tOwned;
					delete v.tValue;
					delete v.tOwned;
					v.tState = 0;
				}
				setTransPending(false);
			}, false);
		} else if (Transition.running) {
			Transition.running = false;
			Transition.effects.push.apply(Transition.effects, Effects);
			Effects = null;
			setTransPending(true);
			return;
		}
	}
	const e = Effects;
	Effects = null;
	if (e.length) runUpdates(() => runEffects(e), false);
	if (res) res();
}
function runQueue(queue) {
	for (let i = 0; i < queue.length; i++) runTop(queue[i]);
}
function lookUpstream(node, ignore) {
	const runningTransition = Transition && Transition.running;
	if (runningTransition) node.tState = 0;
	else node.state = 0;
	for (let i = 0; i < node.sources.length; i += 1) {
		const source = node.sources[i];
		if (source.sources) {
			const state = runningTransition ? source.tState : source.state;
			if (state === STALE) {
				if (source !== ignore && (!source.updatedAt || source.updatedAt < ExecCount)) runTop(source);
			} else if (state === PENDING) lookUpstream(source, ignore);
		}
	}
}
function markDownstream(node) {
	const runningTransition = Transition && Transition.running;
	for (let i = 0; i < node.observers.length; i += 1) {
		const o = node.observers[i];
		if (runningTransition ? !o.tState : !o.state) {
			if (runningTransition) o.tState = PENDING;
			else o.state = PENDING;
			if (o.pure) Updates.push(o);
			else Effects.push(o);
			o.observers && markDownstream(o);
		}
	}
}
function cleanNode(node) {
	let i;
	if (node.sources) while (node.sources.length) {
		const source = node.sources.pop(), index = node.sourceSlots.pop(), obs = source.observers;
		if (obs && obs.length) {
			const n = obs.pop(), s = source.observerSlots.pop();
			if (index < obs.length) {
				n.sourceSlots[s] = index;
				obs[index] = n;
				source.observerSlots[index] = s;
			}
		}
	}
	if (node.tOwned) {
		for (i = node.tOwned.length - 1; i >= 0; i--) cleanNode(node.tOwned[i]);
		delete node.tOwned;
	}
	if (Transition && Transition.running && node.pure) reset(node, true);
	else if (node.owned) {
		for (i = node.owned.length - 1; i >= 0; i--) cleanNode(node.owned[i]);
		node.owned = null;
	}
	if (node.cleanups) {
		for (i = node.cleanups.length - 1; i >= 0; i--) node.cleanups[i]();
		node.cleanups = null;
	}
	if (Transition && Transition.running) node.tState = 0;
	else node.state = 0;
}
function reset(node, top) {
	if (!top) {
		node.tState = 0;
		Transition.disposed.add(node);
	}
	if (node.owned) for (let i = 0; i < node.owned.length; i++) reset(node.owned[i]);
}
function castError(err) {
	if (err instanceof Error) return err;
	return new Error(typeof err === "string" ? err : "Unknown error", { cause: err });
}
function handleError(err, owner = Owner) {
	throw castError(err);
}
function resolveChildren(children) {
	if (typeof children === "function" && !children.length) return resolveChildren(children());
	if (Array.isArray(children)) {
		const results = [];
		for (let i = 0; i < children.length; i++) {
			const result = resolveChildren(children[i]);
			if (Array.isArray(result)) {
				if (result.length < 32768) results.push.apply(results, result);
				else for (let j = 0; j < result.length; j++) results.push(result[j]);
			} else results.push(result);
		}
		return results;
	}
	return children;
}
function createProvider(id, options) {
	return function provider(props) {
		let res;
		createRenderEffect(() => res = untrack(() => {
			Owner.context = {
				...Owner.context,
				[id]: props.value
			};
			return children(() => props.children);
		}), void 0);
		return res;
	};
}
var _tmpl$ = /* @__PURE__ */ template(\`<div><h3>Custom Element Simulation</h3><p>Simulated Custom Element Theme: </p><button>Toggle Theme (via Custom Element Sim)</button><div style=margin-top:1rem><slot><p>This simulates slotted content inheriting theme context\`);
var _tmpl$2 = /* @__PURE__ */ template(\`<div>No theme context\`);
var _tmpl$3 = /* @__PURE__ */ template(\`<div><p>Regular Solid Component Theme: </p><button>Toggle Theme (via Solid Component)\`);
var _tmpl$4 = /* @__PURE__ */ template(\`<div><h4>Nested Context Test</h4><p>Theme accessible here: \`);
var _tmpl$5 = /* @__PURE__ */ template(\`<div><h2>Web Components + SolidJS Context Integration</h2><!><div style=margin:1rem><h3>Context Boundary Testing</h3></div><div style="padding:1rem;margin:1rem;border:1px solid #ccc;border-radius:4px;"><h3>Simulated Shadow DOM with Slots</h3><div style="background:var(--theme-bg, #fff);color:var(--theme-color, #000);padding:1rem;"><p>This simulates content inside shadow DOM</p><slot>Default slot content\`);
const ThemeContext = createContext();
const CustomElementWrapper = () => {
	const context = useContext(ThemeContext);
	const toggleTheme = context?.toggleTheme || (() => {});
	const theme = context?.theme?.() || "light";
	var _el$ = _tmpl$();
	var _el$3 = _el$.firstChild.nextSibling;
	_el$3.firstChild;
	var _el$5 = _el$3.nextSibling;
	insert(_el$3, theme, null);
	addEvent(_el$5, "click", toggleTheme, true);
	effect(() => \`background: \${theme === "light" ? "#f0f0f0" : "#1a1a1a"}; color: \${theme === "light" ? "#000" : "#fff"}; padding: 1rem; border-radius: 4px; border: 1px solid \${theme === "light" ? "#ccc" : "#555"};\`, (_v$, _$p) => {
		style(_el$, _v$, _$p);
	});
	return _el$;
};
const ThemeProvider = (props) => {
	const [theme, setTheme] = createSignal("light");
	const toggleTheme = () => {
		setTheme((current) => current === "light" ? "dark" : "light");
	};
	return createComponent(ThemeContext.Provider, {
		value: {
			theme,
			toggleTheme
		},
		get children() {
			return props.children;
		}
	});
};
const RegularSolidComponent = () => {
	const context = useContext(ThemeContext);
	if (!context) return _tmpl$2();
	const { theme, toggleTheme } = context;
	var _el$7 = _tmpl$3();
	var _el$8 = _el$7.firstChild;
	_el$8.firstChild;
	var _el$10 = _el$8.nextSibling;
	insert(_el$8, theme, null);
	addEvent(_el$10, "click", toggleTheme, true);
	effect(() => \`background: \${theme() === "light" ? "#fff" : "#333"}; color: \${theme() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$7, _v$, _$p);
	});
	return _el$7;
};
const NestedContextTest = () => {
	const context = useContext(ThemeContext);
	var _el$11 = _tmpl$4();
	var _el$13 = _el$11.firstChild.nextSibling;
	_el$13.firstChild;
	insert(_el$13, () => {
		return context?.theme?.();
	}, null);
	insert(_el$11, createComponent(CustomElementWrapper, {}), null);
	effect(() => \`background: \${context?.theme?.() === "light" ? "#f9f9f9" : "#2a2a2a"}; color: \${context?.theme?.() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`, (_v$, _$p) => {
		style(_el$11, _v$, _$p);
	});
	return _el$11;
};
const WebComponentsIntegration = () => {
	return createComponent(ThemeProvider, { get children() {
		var _el$15 = _tmpl$5();
		var _el$17 = _el$15.firstChild.nextSibling;
		var _el$18 = _el$17.nextSibling;
		_el$18.firstChild;
		_el$18.nextSibling;
		insert(_el$15, createComponent(RegularSolidComponent, {}), _el$17);
		insert(_el$15, createComponent(CustomElementWrapper, {}), _el$18);
		insert(_el$18, createComponent(NestedContextTest, {}), null);
		return _el$15;
	} });
};
delegateEvents(["click"]);
export { WebComponentsIntegration as default };
"
`;

exports[`rolldown-plugin-solid src should transform web components with SSR mode 1`] = `
"import { escape, scope, ssr, ssrHydrationKey, ssrStyle } from "@solidjs/web";
const equalFn = (a, b) => a === b;
const signalOptions = { equals: equalFn };
let runEffects = runQueue;
const STALE = 1;
const PENDING = 2;
const UNOWNED = {
	owned: null,
	cleanups: null,
	context: null,
	owner: null
};
var Owner = null;
let Transition = null;
let Listener = null;
let Updates = null;
let Effects = null;
let ExecCount = 0;
function createSignal(value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const s = {
		value,
		observers: null,
		observerSlots: null,
		comparator: options.equals || void 0
	};
	const setter = (value) => {
		if (typeof value === "function") {
			if (Transition && Transition.running && Transition.sources.has(s)) value = value(s.tValue);
			else value = value(s.value);
		}
		return writeSignal(s, value);
	};
	return [readSignal.bind(s), setter];
}
function createRenderEffect(fn, value, options) {
	updateComputation(createComputation(fn, value, false, STALE));
}
function createMemo(fn, value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const c = createComputation(fn, value, true, 0);
	c.observers = null;
	c.observerSlots = null;
	c.comparator = options.equals || void 0;
	updateComputation(c);
	return readSignal.bind(c);
}
function untrack(fn) {
	if (Listener === null) return fn();
	const listener = Listener;
	Listener = null;
	try {
		return fn();
	} finally {
		Listener = listener;
	}
}
const [transPending, setTransPending] = /*@__PURE__*/ createSignal(false);
function createContext(defaultValue, options) {
	const id = Symbol("context");
	return {
		id,
		Provider: createProvider(id),
		defaultValue
	};
}
function useContext(context) {
	let value;
	return Owner && Owner.context && (value = Owner.context[context.id]) !== void 0 ? value : context.defaultValue;
}
function children(fn) {
	const children = createMemo(fn);
	const memo = createMemo(() => resolveChildren(children()));
	memo.toArray = () => {
		const c = memo();
		return Array.isArray(c) ? c : c != null ? [c] : [];
	};
	return memo;
}
function readSignal() {
	const runningTransition = Transition && Transition.running;
	if (this.sources && (runningTransition ? this.tState : this.state)) {
		if ((runningTransition ? this.tState : this.state) === STALE) updateComputation(this);
		else {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(this), false);
			Updates = updates;
		}
	}
	if (Listener) {
		const observers = this.observers;
		if (!observers || observers[observers.length - 1] !== Listener) {
			const sSlot = observers ? observers.length : 0;
			if (!Listener.sources) {
				Listener.sources = [this];
				Listener.sourceSlots = [sSlot];
			} else {
				Listener.sources.push(this);
				Listener.sourceSlots.push(sSlot);
			}
			if (!observers) {
				this.observers = [Listener];
				this.observerSlots = [Listener.sources.length - 1];
			} else {
				observers.push(Listener);
				this.observerSlots.push(Listener.sources.length - 1);
			}
		}
	}
	if (runningTransition && Transition.sources.has(this)) return this.tValue;
	return this.value;
}
function writeSignal(node, value, isComp) {
	let current = Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value;
	if (!node.comparator || !node.comparator(current, value)) {
		if (Transition) {
			const TransitionRunning = Transition.running;
			if (TransitionRunning || !isComp && Transition.sources.has(node)) {
				Transition.sources.add(node);
				node.tValue = value;
			}
			if (!TransitionRunning) node.value = value;
		} else node.value = value;
		if (node.observers && node.observers.length) runUpdates(() => {
			for (let i = 0; i < node.observers.length; i += 1) {
				const o = node.observers[i];
				const TransitionRunning = Transition && Transition.running;
				if (TransitionRunning && Transition.disposed.has(o)) continue;
				if (TransitionRunning ? !o.tState : !o.state) {
					if (o.pure) Updates.push(o);
					else Effects.push(o);
					if (o.observers) markDownstream(o);
				}
				if (!TransitionRunning) o.state = STALE;
				else o.tState = STALE;
			}
			if (Updates.length > 1e6) {
				Updates = [];
				throw new Error();
			}
		}, false);
	}
	return value;
}
function updateComputation(node) {
	if (!node.fn) return;
	cleanNode(node);
	const time = ExecCount;
	runComputation(node, Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value, time);
	if (Transition && !Transition.running && Transition.sources.has(node)) queueMicrotask(() => {
		runUpdates(() => {
			Transition && (Transition.running = true);
			Listener = Owner = node;
			runComputation(node, node.tValue, time);
			Listener = Owner = null;
		}, false);
	});
}
function runComputation(node, value, time) {
	let nextValue;
	const owner = Owner, listener = Listener;
	Listener = Owner = node;
	try {
		nextValue = node.fn(value);
	} catch (err) {
		if (node.pure) {
			if (Transition && Transition.running) {
				node.tState = STALE;
				node.tOwned && node.tOwned.forEach(cleanNode);
				node.tOwned = void 0;
			} else {
				node.state = STALE;
				node.owned && node.owned.forEach(cleanNode);
				node.owned = null;
			}
		}
		node.updatedAt = time + 1;
		return handleError(err);
	} finally {
		Listener = listener;
		Owner = owner;
	}
	if (!node.updatedAt || node.updatedAt <= time) {
		if (node.updatedAt != null && "observers" in node) writeSignal(node, nextValue, true);
		else if (Transition && Transition.running && node.pure) {
			if (!Transition.sources.has(node)) node.value = nextValue;
			Transition.sources.add(node);
			node.tValue = nextValue;
		} else node.value = nextValue;
		node.updatedAt = time;
	}
}
function createComputation(fn, init, pure, state = STALE, options) {
	const c = {
		fn,
		state,
		updatedAt: null,
		owned: null,
		sources: null,
		sourceSlots: null,
		cleanups: null,
		value: init,
		owner: Owner,
		context: Owner ? Owner.context : null,
		pure
	};
	if (Transition && Transition.running) {
		c.state = 0;
		c.tState = state;
	}
	if (Owner === null);
	else if (Owner !== UNOWNED) {
		if (Transition && Transition.running && Owner.pure) {
			if (!Owner.tOwned) Owner.tOwned = [c];
			else Owner.tOwned.push(c);
		} else if (!Owner.owned) Owner.owned = [c];
		else Owner.owned.push(c);
	}
	return c;
}
function runTop(node) {
	const runningTransition = Transition && Transition.running;
	if ((runningTransition ? node.tState : node.state) === 0) return;
	if ((runningTransition ? node.tState : node.state) === PENDING) return lookUpstream(node);
	if (node.suspense && untrack(node.suspense.inFallback)) return node.suspense.effects.push(node);
	const ancestors = [node];
	while ((node = node.owner) && (!node.updatedAt || node.updatedAt < ExecCount)) {
		if (runningTransition && Transition.disposed.has(node)) return;
		if (runningTransition ? node.tState : node.state) ancestors.push(node);
	}
	for (let i = ancestors.length - 1; i >= 0; i--) {
		node = ancestors[i];
		if (runningTransition) {
			let top = node, prev = ancestors[i + 1];
			while ((top = top.owner) && top !== prev) if (Transition.disposed.has(top)) return;
		}
		if ((runningTransition ? node.tState : node.state) === STALE) updateComputation(node);
		else if ((runningTransition ? node.tState : node.state) === PENDING) {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(node, ancestors[0]), false);
			Updates = updates;
		}
	}
}
function runUpdates(fn, init) {
	if (Updates) return fn();
	let wait = false;
	if (!init) Updates = [];
	if (Effects) wait = true;
	else Effects = [];
	ExecCount++;
	try {
		const res = fn();
		completeUpdates(wait);
		return res;
	} catch (err) {
		if (!wait) Effects = null;
		Updates = null;
		handleError(err);
	}
}
function completeUpdates(wait) {
	if (Updates) {
		runQueue(Updates);
		Updates = null;
	}
	if (wait) return;
	let res;
	if (Transition) {
		if (!Transition.promises.size && !Transition.queue.size) {
			const sources = Transition.sources;
			const disposed = Transition.disposed;
			Effects.push.apply(Effects, Transition.effects);
			res = Transition.resolve;
			for (const e of Effects) {
				"tState" in e && (e.state = e.tState);
				delete e.tState;
			}
			Transition = null;
			runUpdates(() => {
				for (const d of disposed) cleanNode(d);
				for (const v of sources) {
					v.value = v.tValue;
					if (v.owned) for (let i = 0, len = v.owned.length; i < len; i++) cleanNode(v.owned[i]);
					if (v.tOwned) v.owned = v.tOwned;
					delete v.tValue;
					delete v.tOwned;
					v.tState = 0;
				}
				setTransPending(false);
			}, false);
		} else if (Transition.running) {
			Transition.running = false;
			Transition.effects.push.apply(Transition.effects, Effects);
			Effects = null;
			setTransPending(true);
			return;
		}
	}
	const e = Effects;
	Effects = null;
	if (e.length) runUpdates(() => runEffects(e), false);
	if (res) res();
}
function runQueue(queue) {
	for (let i = 0; i < queue.length; i++) runTop(queue[i]);
}
function lookUpstream(node, ignore) {
	const runningTransition = Transition && Transition.running;
	if (runningTransition) node.tState = 0;
	else node.state = 0;
	for (let i = 0; i < node.sources.length; i += 1) {
		const source = node.sources[i];
		if (source.sources) {
			const state = runningTransition ? source.tState : source.state;
			if (state === STALE) {
				if (source !== ignore && (!source.updatedAt || source.updatedAt < ExecCount)) runTop(source);
			} else if (state === PENDING) lookUpstream(source, ignore);
		}
	}
}
function markDownstream(node) {
	const runningTransition = Transition && Transition.running;
	for (let i = 0; i < node.observers.length; i += 1) {
		const o = node.observers[i];
		if (runningTransition ? !o.tState : !o.state) {
			if (runningTransition) o.tState = PENDING;
			else o.state = PENDING;
			if (o.pure) Updates.push(o);
			else Effects.push(o);
			o.observers && markDownstream(o);
		}
	}
}
function cleanNode(node) {
	let i;
	if (node.sources) while (node.sources.length) {
		const source = node.sources.pop(), index = node.sourceSlots.pop(), obs = source.observers;
		if (obs && obs.length) {
			const n = obs.pop(), s = source.observerSlots.pop();
			if (index < obs.length) {
				n.sourceSlots[s] = index;
				obs[index] = n;
				source.observerSlots[index] = s;
			}
		}
	}
	if (node.tOwned) {
		for (i = node.tOwned.length - 1; i >= 0; i--) cleanNode(node.tOwned[i]);
		delete node.tOwned;
	}
	if (Transition && Transition.running && node.pure) reset(node, true);
	else if (node.owned) {
		for (i = node.owned.length - 1; i >= 0; i--) cleanNode(node.owned[i]);
		node.owned = null;
	}
	if (node.cleanups) {
		for (i = node.cleanups.length - 1; i >= 0; i--) node.cleanups[i]();
		node.cleanups = null;
	}
	if (Transition && Transition.running) node.tState = 0;
	else node.state = 0;
}
function reset(node, top) {
	if (!top) {
		node.tState = 0;
		Transition.disposed.add(node);
	}
	if (node.owned) for (let i = 0; i < node.owned.length; i++) reset(node.owned[i]);
}
function castError(err) {
	if (err instanceof Error) return err;
	return new Error(typeof err === "string" ? err : "Unknown error", { cause: err });
}
function handleError(err, owner = Owner) {
	throw castError(err);
}
function resolveChildren(children) {
	if (typeof children === "function" && !children.length) return resolveChildren(children());
	if (Array.isArray(children)) {
		const results = [];
		for (let i = 0; i < children.length; i++) {
			const result = resolveChildren(children[i]);
			if (Array.isArray(result)) {
				if (result.length < 32768) results.push.apply(results, result);
				else for (let j = 0; j < result.length; j++) results.push(result[j]);
			} else results.push(result);
		}
		return results;
	}
	return children;
}
function createProvider(id, options) {
	return function provider(props) {
		let res;
		createRenderEffect(() => res = untrack(() => {
			Owner.context = {
				...Owner.context,
				[id]: props.value
			};
			return children(() => props.children);
		}), void 0);
		return res;
	};
}
var _tmpl$ = [
	"<div",
	" style=\\"",
	"\\"><h3>Custom Element Simulation</h3><p>Simulated Custom Element Theme: <!--$-->",
	"<!--/--></p><button>Toggle Theme (via Custom Element Sim)</button><div style=\\"margin-top:1rem;\\"><slot><p>This simulates slotted content inheriting theme context</p></slot></div></div>"
];
var _tmpl$2 = ["<div", ">No theme context</div>"];
var _tmpl$3 = [
	"<div",
	" style=\\"",
	"\\"><p>Regular Solid Component Theme: <!--$-->",
	"<!--/--></p><button>Toggle Theme (via Solid Component)</button></div>"
];
var _tmpl$4 = [
	"<div",
	" style=\\"",
	"\\"><h4>Nested Context Test</h4><p>Theme accessible here: <!--$-->",
	"<!--/--></p><!--$-->",
	"<!--/--></div>"
];
var _tmpl$5 = [
	"<div",
	"><h2>Web Components + SolidJS Context Integration</h2><!--$-->",
	"<!--/--><!--$-->",
	"<!--/--><div style=\\"margin:1rem;\\"><h3>Context Boundary Testing</h3><!--$-->",
	"<!--/--></div><div style=\\"padding:1rem;margin:1rem;border:1px solid #ccc;border-radius:4px;\\"><h3>Simulated Shadow DOM with Slots</h3><div style=\\"background:var(--theme-bg, #fff);color:var(--theme-color, #000);padding:1rem;\\"><p>This simulates content inside shadow DOM</p><slot>Default slot content</slot></div></div></div>"
];
const ThemeContext = createContext();
const CustomElementWrapper = () => {
	const context = useContext(ThemeContext);
	context?.toggleTheme;
	const theme = context?.theme?.() || "light";
	var _v$ = ssrHydrationKey(), _v$2 = escape(theme);
	return ssr(_tmpl$, _v$, ssrStyle(\`background: \${theme === "light" ? "#f0f0f0" : "#1a1a1a"}; color: \${theme === "light" ? "#000" : "#fff"}; padding: 1rem; border-radius: 4px; border: 1px solid \${theme === "light" ? "#ccc" : "#555"};\`), _v$2);
};
const ThemeProvider = (props) => {
	const [theme, setTheme] = createSignal("light");
	const toggleTheme = () => {
		setTheme((current) => current === "light" ? "dark" : "light");
	};
	return ThemeContext.Provider({
		value: {
			theme,
			toggleTheme
		},
		get children() {
			return props.children;
		}
	});
};
const RegularSolidComponent = () => {
	var _v$3;
	const context = useContext(ThemeContext);
	if (!context) return _v$3 = ssrHydrationKey(), ssr(_tmpl$2, _v$3);
	const { theme, toggleTheme } = context;
	var _v$4 = ssrHydrationKey(), _v$5 = () => {
		return ssrStyle(\`background: \${theme() === "light" ? "#fff" : "#333"}; color: \${theme() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`);
	}, _v$6 = scope(() => {
		return escape(theme());
	});
	return ssr(_tmpl$3, _v$4, _v$5, _v$6);
};
const NestedContextTest = () => {
	const context = useContext(ThemeContext);
	var _v$7 = ssrHydrationKey(), _v$8 = () => {
		return ssrStyle(\`background: \${context?.theme?.() === "light" ? "#f9f9f9" : "#2a2a2a"}; color: \${context?.theme?.() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`);
	}, _v$9 = () => {
		return escape(context?.theme?.());
	}, _v$10 = escape(CustomElementWrapper({}));
	return ssr(_tmpl$4, _v$7, _v$8, _v$9, _v$10);
};
const WebComponentsIntegration = () => {
	var _v$11, _v$12, _v$13, _v$14;
	return ThemeProvider({ get children() {
		return _v$11 = ssrHydrationKey(), _v$12 = escape(RegularSolidComponent({})), _v$13 = escape(CustomElementWrapper({})), _v$14 = escape(NestedContextTest({})), ssr(_tmpl$5, _v$11, _v$12, _v$13, _v$14);
	} });
};
export { WebComponentsIntegration as default };
"
`;

exports[`rolldown-plugin-solid dist should transform web components with SSR mode 1`] = `
"import { escape, scope, ssr, ssrHydrationKey, ssrStyle } from "@solidjs/web";
const equalFn = (a, b) => a === b;
const signalOptions = { equals: equalFn };
let runEffects = runQueue;
const STALE = 1;
const PENDING = 2;
const UNOWNED = {
	owned: null,
	cleanups: null,
	context: null,
	owner: null
};
var Owner = null;
let Transition = null;
let Listener = null;
let Updates = null;
let Effects = null;
let ExecCount = 0;
function createSignal(value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const s = {
		value,
		observers: null,
		observerSlots: null,
		comparator: options.equals || void 0
	};
	const setter = (value) => {
		if (typeof value === "function") {
			if (Transition && Transition.running && Transition.sources.has(s)) value = value(s.tValue);
			else value = value(s.value);
		}
		return writeSignal(s, value);
	};
	return [readSignal.bind(s), setter];
}
function createRenderEffect(fn, value, options) {
	updateComputation(createComputation(fn, value, false, STALE));
}
function createMemo(fn, value, options) {
	options = options ? Object.assign({}, signalOptions, options) : signalOptions;
	const c = createComputation(fn, value, true, 0);
	c.observers = null;
	c.observerSlots = null;
	c.comparator = options.equals || void 0;
	updateComputation(c);
	return readSignal.bind(c);
}
function untrack(fn) {
	if (Listener === null) return fn();
	const listener = Listener;
	Listener = null;
	try {
		return fn();
	} finally {
		Listener = listener;
	}
}
const [transPending, setTransPending] = /*@__PURE__*/ createSignal(false);
function createContext(defaultValue, options) {
	const id = Symbol("context");
	return {
		id,
		Provider: createProvider(id),
		defaultValue
	};
}
function useContext(context) {
	let value;
	return Owner && Owner.context && (value = Owner.context[context.id]) !== void 0 ? value : context.defaultValue;
}
function children(fn) {
	const children = createMemo(fn);
	const memo = createMemo(() => resolveChildren(children()));
	memo.toArray = () => {
		const c = memo();
		return Array.isArray(c) ? c : c != null ? [c] : [];
	};
	return memo;
}
function readSignal() {
	const runningTransition = Transition && Transition.running;
	if (this.sources && (runningTransition ? this.tState : this.state)) {
		if ((runningTransition ? this.tState : this.state) === STALE) updateComputation(this);
		else {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(this), false);
			Updates = updates;
		}
	}
	if (Listener) {
		const observers = this.observers;
		if (!observers || observers[observers.length - 1] !== Listener) {
			const sSlot = observers ? observers.length : 0;
			if (!Listener.sources) {
				Listener.sources = [this];
				Listener.sourceSlots = [sSlot];
			} else {
				Listener.sources.push(this);
				Listener.sourceSlots.push(sSlot);
			}
			if (!observers) {
				this.observers = [Listener];
				this.observerSlots = [Listener.sources.length - 1];
			} else {
				observers.push(Listener);
				this.observerSlots.push(Listener.sources.length - 1);
			}
		}
	}
	if (runningTransition && Transition.sources.has(this)) return this.tValue;
	return this.value;
}
function writeSignal(node, value, isComp) {
	let current = Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value;
	if (!node.comparator || !node.comparator(current, value)) {
		if (Transition) {
			const TransitionRunning = Transition.running;
			if (TransitionRunning || !isComp && Transition.sources.has(node)) {
				Transition.sources.add(node);
				node.tValue = value;
			}
			if (!TransitionRunning) node.value = value;
		} else node.value = value;
		if (node.observers && node.observers.length) runUpdates(() => {
			for (let i = 0; i < node.observers.length; i += 1) {
				const o = node.observers[i];
				const TransitionRunning = Transition && Transition.running;
				if (TransitionRunning && Transition.disposed.has(o)) continue;
				if (TransitionRunning ? !o.tState : !o.state) {
					if (o.pure) Updates.push(o);
					else Effects.push(o);
					if (o.observers) markDownstream(o);
				}
				if (!TransitionRunning) o.state = STALE;
				else o.tState = STALE;
			}
			if (Updates.length > 1e6) {
				Updates = [];
				throw new Error();
			}
		}, false);
	}
	return value;
}
function updateComputation(node) {
	if (!node.fn) return;
	cleanNode(node);
	const time = ExecCount;
	runComputation(node, Transition && Transition.running && Transition.sources.has(node) ? node.tValue : node.value, time);
	if (Transition && !Transition.running && Transition.sources.has(node)) queueMicrotask(() => {
		runUpdates(() => {
			Transition && (Transition.running = true);
			Listener = Owner = node;
			runComputation(node, node.tValue, time);
			Listener = Owner = null;
		}, false);
	});
}
function runComputation(node, value, time) {
	let nextValue;
	const owner = Owner, listener = Listener;
	Listener = Owner = node;
	try {
		nextValue = node.fn(value);
	} catch (err) {
		if (node.pure) {
			if (Transition && Transition.running) {
				node.tState = STALE;
				node.tOwned && node.tOwned.forEach(cleanNode);
				node.tOwned = void 0;
			} else {
				node.state = STALE;
				node.owned && node.owned.forEach(cleanNode);
				node.owned = null;
			}
		}
		node.updatedAt = time + 1;
		return handleError(err);
	} finally {
		Listener = listener;
		Owner = owner;
	}
	if (!node.updatedAt || node.updatedAt <= time) {
		if (node.updatedAt != null && "observers" in node) writeSignal(node, nextValue, true);
		else if (Transition && Transition.running && node.pure) {
			if (!Transition.sources.has(node)) node.value = nextValue;
			Transition.sources.add(node);
			node.tValue = nextValue;
		} else node.value = nextValue;
		node.updatedAt = time;
	}
}
function createComputation(fn, init, pure, state = STALE, options) {
	const c = {
		fn,
		state,
		updatedAt: null,
		owned: null,
		sources: null,
		sourceSlots: null,
		cleanups: null,
		value: init,
		owner: Owner,
		context: Owner ? Owner.context : null,
		pure
	};
	if (Transition && Transition.running) {
		c.state = 0;
		c.tState = state;
	}
	if (Owner === null);
	else if (Owner !== UNOWNED) {
		if (Transition && Transition.running && Owner.pure) {
			if (!Owner.tOwned) Owner.tOwned = [c];
			else Owner.tOwned.push(c);
		} else if (!Owner.owned) Owner.owned = [c];
		else Owner.owned.push(c);
	}
	return c;
}
function runTop(node) {
	const runningTransition = Transition && Transition.running;
	if ((runningTransition ? node.tState : node.state) === 0) return;
	if ((runningTransition ? node.tState : node.state) === PENDING) return lookUpstream(node);
	if (node.suspense && untrack(node.suspense.inFallback)) return node.suspense.effects.push(node);
	const ancestors = [node];
	while ((node = node.owner) && (!node.updatedAt || node.updatedAt < ExecCount)) {
		if (runningTransition && Transition.disposed.has(node)) return;
		if (runningTransition ? node.tState : node.state) ancestors.push(node);
	}
	for (let i = ancestors.length - 1; i >= 0; i--) {
		node = ancestors[i];
		if (runningTransition) {
			let top = node, prev = ancestors[i + 1];
			while ((top = top.owner) && top !== prev) if (Transition.disposed.has(top)) return;
		}
		if ((runningTransition ? node.tState : node.state) === STALE) updateComputation(node);
		else if ((runningTransition ? node.tState : node.state) === PENDING) {
			const updates = Updates;
			Updates = null;
			runUpdates(() => lookUpstream(node, ancestors[0]), false);
			Updates = updates;
		}
	}
}
function runUpdates(fn, init) {
	if (Updates) return fn();
	let wait = false;
	if (!init) Updates = [];
	if (Effects) wait = true;
	else Effects = [];
	ExecCount++;
	try {
		const res = fn();
		completeUpdates(wait);
		return res;
	} catch (err) {
		if (!wait) Effects = null;
		Updates = null;
		handleError(err);
	}
}
function completeUpdates(wait) {
	if (Updates) {
		runQueue(Updates);
		Updates = null;
	}
	if (wait) return;
	let res;
	if (Transition) {
		if (!Transition.promises.size && !Transition.queue.size) {
			const sources = Transition.sources;
			const disposed = Transition.disposed;
			Effects.push.apply(Effects, Transition.effects);
			res = Transition.resolve;
			for (const e of Effects) {
				"tState" in e && (e.state = e.tState);
				delete e.tState;
			}
			Transition = null;
			runUpdates(() => {
				for (const d of disposed) cleanNode(d);
				for (const v of sources) {
					v.value = v.tValue;
					if (v.owned) for (let i = 0, len = v.owned.length; i < len; i++) cleanNode(v.owned[i]);
					if (v.tOwned) v.owned = v.tOwned;
					delete v.tValue;
					delete v.tOwned;
					v.tState = 0;
				}
				setTransPending(false);
			}, false);
		} else if (Transition.running) {
			Transition.running = false;
			Transition.effects.push.apply(Transition.effects, Effects);
			Effects = null;
			setTransPending(true);
			return;
		}
	}
	const e = Effects;
	Effects = null;
	if (e.length) runUpdates(() => runEffects(e), false);
	if (res) res();
}
function runQueue(queue) {
	for (let i = 0; i < queue.length; i++) runTop(queue[i]);
}
function lookUpstream(node, ignore) {
	const runningTransition = Transition && Transition.running;
	if (runningTransition) node.tState = 0;
	else node.state = 0;
	for (let i = 0; i < node.sources.length; i += 1) {
		const source = node.sources[i];
		if (source.sources) {
			const state = runningTransition ? source.tState : source.state;
			if (state === STALE) {
				if (source !== ignore && (!source.updatedAt || source.updatedAt < ExecCount)) runTop(source);
			} else if (state === PENDING) lookUpstream(source, ignore);
		}
	}
}
function markDownstream(node) {
	const runningTransition = Transition && Transition.running;
	for (let i = 0; i < node.observers.length; i += 1) {
		const o = node.observers[i];
		if (runningTransition ? !o.tState : !o.state) {
			if (runningTransition) o.tState = PENDING;
			else o.state = PENDING;
			if (o.pure) Updates.push(o);
			else Effects.push(o);
			o.observers && markDownstream(o);
		}
	}
}
function cleanNode(node) {
	let i;
	if (node.sources) while (node.sources.length) {
		const source = node.sources.pop(), index = node.sourceSlots.pop(), obs = source.observers;
		if (obs && obs.length) {
			const n = obs.pop(), s = source.observerSlots.pop();
			if (index < obs.length) {
				n.sourceSlots[s] = index;
				obs[index] = n;
				source.observerSlots[index] = s;
			}
		}
	}
	if (node.tOwned) {
		for (i = node.tOwned.length - 1; i >= 0; i--) cleanNode(node.tOwned[i]);
		delete node.tOwned;
	}
	if (Transition && Transition.running && node.pure) reset(node, true);
	else if (node.owned) {
		for (i = node.owned.length - 1; i >= 0; i--) cleanNode(node.owned[i]);
		node.owned = null;
	}
	if (node.cleanups) {
		for (i = node.cleanups.length - 1; i >= 0; i--) node.cleanups[i]();
		node.cleanups = null;
	}
	if (Transition && Transition.running) node.tState = 0;
	else node.state = 0;
}
function reset(node, top) {
	if (!top) {
		node.tState = 0;
		Transition.disposed.add(node);
	}
	if (node.owned) for (let i = 0; i < node.owned.length; i++) reset(node.owned[i]);
}
function castError(err) {
	if (err instanceof Error) return err;
	return new Error(typeof err === "string" ? err : "Unknown error", { cause: err });
}
function handleError(err, owner = Owner) {
	throw castError(err);
}
function resolveChildren(children) {
	if (typeof children === "function" && !children.length) return resolveChildren(children());
	if (Array.isArray(children)) {
		const results = [];
		for (let i = 0; i < children.length; i++) {
			const result = resolveChildren(children[i]);
			if (Array.isArray(result)) {
				if (result.length < 32768) results.push.apply(results, result);
				else for (let j = 0; j < result.length; j++) results.push(result[j]);
			} else results.push(result);
		}
		return results;
	}
	return children;
}
function createProvider(id, options) {
	return function provider(props) {
		let res;
		createRenderEffect(() => res = untrack(() => {
			Owner.context = {
				...Owner.context,
				[id]: props.value
			};
			return children(() => props.children);
		}), void 0);
		return res;
	};
}
var _tmpl$ = [
	"<div",
	" style=\\"",
	"\\"><h3>Custom Element Simulation</h3><p>Simulated Custom Element Theme: <!--$-->",
	"<!--/--></p><button>Toggle Theme (via Custom Element Sim)</button><div style=\\"margin-top:1rem;\\"><slot><p>This simulates slotted content inheriting theme context</p></slot></div></div>"
];
var _tmpl$2 = ["<div", ">No theme context</div>"];
var _tmpl$3 = [
	"<div",
	" style=\\"",
	"\\"><p>Regular Solid Component Theme: <!--$-->",
	"<!--/--></p><button>Toggle Theme (via Solid Component)</button></div>"
];
var _tmpl$4 = [
	"<div",
	" style=\\"",
	"\\"><h4>Nested Context Test</h4><p>Theme accessible here: <!--$-->",
	"<!--/--></p><!--$-->",
	"<!--/--></div>"
];
var _tmpl$5 = [
	"<div",
	"><h2>Web Components + SolidJS Context Integration</h2><!--$-->",
	"<!--/--><!--$-->",
	"<!--/--><div style=\\"margin:1rem;\\"><h3>Context Boundary Testing</h3><!--$-->",
	"<!--/--></div><div style=\\"padding:1rem;margin:1rem;border:1px solid #ccc;border-radius:4px;\\"><h3>Simulated Shadow DOM with Slots</h3><div style=\\"background:var(--theme-bg, #fff);color:var(--theme-color, #000);padding:1rem;\\"><p>This simulates content inside shadow DOM</p><slot>Default slot content</slot></div></div></div>"
];
const ThemeContext = createContext();
const CustomElementWrapper = () => {
	const context = useContext(ThemeContext);
	context?.toggleTheme;
	const theme = context?.theme?.() || "light";
	var _v$ = ssrHydrationKey(), _v$2 = escape(theme);
	return ssr(_tmpl$, _v$, ssrStyle(\`background: \${theme === "light" ? "#f0f0f0" : "#1a1a1a"}; color: \${theme === "light" ? "#000" : "#fff"}; padding: 1rem; border-radius: 4px; border: 1px solid \${theme === "light" ? "#ccc" : "#555"};\`), _v$2);
};
const ThemeProvider = (props) => {
	const [theme, setTheme] = createSignal("light");
	const toggleTheme = () => {
		setTheme((current) => current === "light" ? "dark" : "light");
	};
	return ThemeContext.Provider({
		value: {
			theme,
			toggleTheme
		},
		get children() {
			return props.children;
		}
	});
};
const RegularSolidComponent = () => {
	var _v$3;
	const context = useContext(ThemeContext);
	if (!context) return _v$3 = ssrHydrationKey(), ssr(_tmpl$2, _v$3);
	const { theme, toggleTheme } = context;
	var _v$4 = ssrHydrationKey(), _v$5 = () => {
		return ssrStyle(\`background: \${theme() === "light" ? "#fff" : "#333"}; color: \${theme() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`);
	}, _v$6 = scope(() => {
		return escape(theme());
	});
	return ssr(_tmpl$3, _v$4, _v$5, _v$6);
};
const NestedContextTest = () => {
	const context = useContext(ThemeContext);
	var _v$7 = ssrHydrationKey(), _v$8 = () => {
		return ssrStyle(\`background: \${context?.theme?.() === "light" ? "#f9f9f9" : "#2a2a2a"}; color: \${context?.theme?.() === "light" ? "#000" : "#fff"}; padding: 1rem; margin: 1rem; border-radius: 4px;\`);
	}, _v$9 = () => {
		return escape(context?.theme?.());
	}, _v$10 = escape(CustomElementWrapper({}));
	return ssr(_tmpl$4, _v$7, _v$8, _v$9, _v$10);
};
const WebComponentsIntegration = () => {
	var _v$11, _v$12, _v$13, _v$14;
	return ThemeProvider({ get children() {
		return _v$11 = ssrHydrationKey(), _v$12 = escape(RegularSolidComponent({})), _v$13 = escape(CustomElementWrapper({})), _v$14 = escape(NestedContextTest({})), ssr(_tmpl$5, _v$11, _v$12, _v$13, _v$14);
	} });
};
export { WebComponentsIntegration as default };
"
`;
